# cnqs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_yz.sh  build_yz.sh~  config.yaml  hamiltonian.yaml
app/: BasicProblem.cpp  CMakeLists.txt  FourierProblem.cpp  InvPowerIterBasic.cpp  InvPowerIterFourier.cpp  inverse_power_direct.cpp  inverse_power_fourier.cpp  network_chain_3.json  network_chain_4.json  network_chain_6.json  parameters_basic.txt  parameters_fourier.txt  pdesolver_fd.cpp  pdesolver_sd.cpp  pdesolver_tt.cpp  vmcsolver.cpp
doc/: CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
example/: BasicProblem.cpp  CMakeLists.txt  FourierProblem.cpp  network.json
hmcsolver/: README.md  config.yaml  consistency.py  environment.yml  logger.py  nqs.py  util.py  wavefunction.py
include/: CnqsBasicOperator.hpp  CnqsFourierOperator.hpp  CnqsFourierPreconditioner.hpp  CnqsOperator.hpp  CnqsPreconditioner.hpp  CnqsTrivialPreconditioner.hpp  CnqsUtils.hpp  CnqsVector.hpp  Cnqs_BasicProblem.hpp  Cnqs_BasicProblem.tpp  Cnqs_FourierProblem.hpp  Cnqs_FourierProblem.tpp  Cnqs_Network.hpp  Cnqs_Network.tpp  Cnqs_Problem.hpp  InvPowerIter.hpp  cnqs_hamiltonian.hpp  cnqs_hamiltonian_direct.hpp  cnqs_hamiltonian_fourier.hpp  cnqs_preconditioner.hpp  cnqs_preconditioner_fourier.hpp  cnqs_preconditioner_trivial.hpp  cnqs_state.hpp  cnqs_trivial_preconditioner.hpp
misc/: communicationPattern.m
notes/: cnqs.tex  main.tex  preamble.tex
pdesolver/: CMakeLists.txt  README.md
pdesolver/app/: BasicProblem.cpp  CMakeLists.txt  FourierProblem.cpp  network.yaml  network_chain_2.json  network_chain_3.json  network_chain_4.json  network_chain_5.json  network_chain_7.json  network_cube.json
pdesolver/include/: Cnqs_BasicProblem.hpp  Cnqs_BasicProblem.tpp  Cnqs_FourierProblem.hpp  Cnqs_FourierProblem.tpp  Cnqs_Hamiltonian.hpp  Cnqs_Network.hpp  Cnqs_Problem.hpp  Cnqs_ShiftedOperator.hpp
pdesolver/runs/complete_4/: network.yaml  submitjob.sbat
pdesolver/runs/lattice_2x2/: network.yaml  submitjob.sbat
pdesolver/test/: CMakeLists.txt  Cnqs_BasicProblemTest.cpp  Cnqs_FourierProblemTest.cpp  Cnqs_HamiltonianTest.cpp  Cnqs_NetworkTest.cpp  hamiltonian.yaml  network.json  network.yaml
runs/: chain_10_hamiltonian.yaml  chain_10_vmc_1_config.yaml  chain_10_vmc_1_submitjob.sbat  chain_10_vmc_2_config.yaml  chain_10_vmc_2_submitjob.sbat  chain_10_vmc_3_config.yaml  chain_10_vmc_3_submitjob.sbat  chain_10_vmc_4_config.yaml  chain_10_vmc_4_submitjob.sbat  chain_10_vmc_5_config.yaml  chain_10_vmc_5_submitjob.sbat  chain_2_pde_submitjob.sbat  chain_2_vmc_config.yaml  chain_2_vmc_submitjob.sbat  chain_3_pde_submitjob.sbat  chain_3_vmc_config.yaml  chain_3_vmc_submitjob.sbat  chain_4_pde_submitjob.sbat  chain_4_vmc_config.yaml  chain_4_vmc_submitjob.sbat  chain_5_hamiltonian.yaml  chain_5_pde_submitjob.sbat  chain_5_vmc_config.yaml  chain_5_vmc_submitjob.sbat  chain_6_hamiltonian.yaml  chain_6_pde_submitjob.sbat  chain_6_vmc_config.yaml  chain_6_vmc_submitjob.sbat  chain_7_pde_submitjob.sbat  chain_7_vmc_config.yaml  chain_7_vmc_submitjob.sbat  complete_4_pde_submitjob.sbat  complete_4_vmc_config.yaml  complete_4_vmc_submitjob.sbat  generate_lattice_hamiltonian.py  lattice_2x2_pde_submitjob.sbat  lattice_2x2_vmc_config.yaml  lattice_2x2_vmc_submitjob.sbat
runs/chain_10_vmc_1/: config.yaml  submitjob.sbat
runs/chain_10_vmc_2/: config.yaml  submitjob.sbat
runs/chain_10_vmc_3/: config.yaml  submitjob.sbat
runs/chain_10_vmc_4/: config.yaml  submitjob.sbat
runs/chain_10_vmc_5/: config.yaml  submitjob.sbat
runs/chain_2_pde/: hamiltonian.yaml  submitjob.sbat
runs/chain_2_vmc/: config.yaml  submitjob.sbat
runs/chain_3_pde/: hamiltonian.yaml  submitjob.sbat
runs/chain_3_vmc/: config.yaml  submitjob.sbat
runs/chain_4_pde/: hamiltonian.yaml  submitjob.sbat
runs/chain_4_vmc/: config.yaml  submitjob.sbat
runs/chain_5_pde/: submitjob.sbat
runs/chain_5_vmc/: config.yaml  submitjob.sbat
runs/chain_6_pde/: submitjob.sbat
runs/chain_6_vmc/: config.yaml  submitjob.sbat
runs/chain_7_pde/: hamiltonian.yaml  submitjob.sbat
runs/chain_7_vmc/: config.yaml  submitjob.sbat
runs/complete_4_pde/: submitjob.sbat
runs/complete_4_vmc/: config.yaml  hamiltonian.yaml  submitjob.sbat
runs/lattice_2x2_pde/: hamiltonian.yaml  submitjob.sbat
runs/lattice_2x2_vmc/: config.yaml  submitjob.sbat
src/: CMakeLists.txt  CnqsBasicOperator.cpp  CnqsFourierOperator.cpp  CnqsFourierPreconditioner.cpp  CnqsOperator.cpp  CnqsPreconditioner.cpp  CnqsTrivialPreconditioner.cpp  CnqsUtils.cpp  CnqsVector.cpp  Cnqs_BasicProblem.cpp  Cnqs_FourierProblem.cpp  Cnqs_Network.cpp  Cnqs_Problem.cpp  Cnqs_ShiftedOperator.hpp  Cnqs_Utils.cpp  Cnqs_Utils.hpp  ImlCnqsInterface.hpp  InvPowerIter.cpp  Utils.cpp  Utils.hpp  cnqs_hamiltonian.cpp  cnqs_hamiltonian_direct.cpp  cnqs_hamiltonian_fourier.cpp  cnqs_preconditioner_fourier.cpp  cnqs_state.cpp  utils.cpp  utils.hpp
src/pdesolver/: CMakeLists.txt  finite_difference_problem.cpp  hamiltonian.cpp  shifted_operator.hpp  spectral_difference_problem.cpp  tensor_train_problem.cpp
src/vmcsolver/: CMakeLists.txt  config.cpp  nqs.cpp  optimization.cpp  sampler.cpp
test/: CMakeLists.txt  CnqsBasicOperatorTest.cpp  CnqsFourierOperatorTest.cpp  CnqsFourierPreconditionerTest.cpp  CnqsTrivialPreconditionerTest.cpp  CnqsVectorTest.cpp  Cnqs_BasicProblemTest.cpp  Cnqs_FourierProblemTest.cpp  Cnqs_NetworkTest.cpp  InvPowerIterTest.cpp  cnqs_hamiltonian_direct_test.cpp  cnqs_hamiltonian_fourier_test.cpp  cnqs_hamiltonian_test.cpp  cnqs_state_test.cpp  network.json
utils/: analyze_samples.py
vmcsolver/: README.md  analyze.py  config.yaml  hamiltonian.yaml  logger.py  main.py  nqs.py  optimization.py  plot.py  sampler.py  util.py  wavefunction.py
vmcsolver_cpp/: CMakeLists.txt  README.md  config.yaml
vmcsolver_cpp/app/: CMakeLists.txt  main.cpp
vmcsolver_cpp/include/cnqs/: config.hpp  nqs.hpp  optimization.hpp  sampler.hpp
vmcsolver_cpp/src/: CMakeLists.txt  config.cpp  nqs.cpp  optimization.cpp  sampler.cpp
(+37 files in other folders)
