macro(CNQS_add_app APPNAME)
    add_executable(${APPNAME} ${ARGN})
    target_link_libraries(${APPNAME} CNQS::cnqs)
endmacro()

CNQS_add_app(basic_problem BasicProblem.cpp)
CNQS_add_app(fourier_problem FourierProblem.cpp)

configure_file(network_chain_2.json network_chain_2.json COPYONLY)
configure_file(network_chain_3.json network_chain_3.json COPYONLY)
configure_file(network_chain_4.json network_chain_4.json COPYONLY)
configure_file(network_chain_5.json network_chain_5.json COPYONLY)
configure_file(network_chain_6.json network_chain_6.json COPYONLY)
configure_file(network_square.json network_square.json COPYONLY)
configure_file(network_cube.json network_cube.json COPYONLY)
